sum elements alignment fix

--- a/src/components/Sum/style.css
+++ b/src/components/Sum/style.css
@@ -8,7 +8,6 @@
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  margin-right: 92px;
   padding: 0px 5px;
 }
 
